--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "fitness-app",
+  "name": "fitness-app-v2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2",
-    "jotai": "^2.4.3",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-responsive-carousel": "^3.2.23"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "next": "15.5.0"
   },
   "devDependencies": {
-    "eslint": "latest",
-    "eslint-config-next": "latest"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.0",
+    "@eslint/eslintrc": "^3"
   }
 }
